--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -1,78 +1,19 @@
 {% extends "surveyinterface/base.html" %}
+{% load staticfiles %}
+
 {% block body %}
 <div id="surveyContainer">
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
+    {% for survey in object_list %}
+        <div class="thumbnail">
+            <img src="{% static 'images/docicon.jpg' %}" alt="...">
+            <div class="caption">
+                <h3>{{ survey.name }}</h3>
+                <span>{{ survey.dateconducted }}</span>
+                <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
+            </div>
         </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
-    <div class="thumbnail">
-        <img src="static/img/docicon.jpg" alt="...">
-        <div class="caption">
-            <h3>Name</h3>
-            <p>Survey Description</p>
-            <p><a href="survey" class="btn btn-primary" role="button">View</a></p>
-        </div>
-    </div>
+    {% empty %}
+        <span>There are no surveys.</span>
+    {% endfor %}
 </div>
 {% endblock %}
-
