Created Survey detail view and set up its url configuration.

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -3,8 +3,8 @@
         <div id="mainContent">
         <div id="listQuestions" class="panel-group"></div>
         <div id="visualizationContent">
-            <h3 id="txtTitle"></h3>
-            <h3 id="txtDescription"></h3>
+            <h3 id="txtTitle">{{ object.name }}</h3>
+            <h3 id="txtDescription">{{ object.dateconducted }}</h3>
             <div class="btn-group">
               <button id="nodeview" class="btn">Node View</button>
               <button id="collapsedview" class="btn">Percentage View</button>
