--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -15,7 +15,7 @@
 
     {% for survey in object_list %}
         <div class="thumbnail">
-            <img src="/static/img/docicon.jpg" alt="...">
+            <img src="/static/images/docicon.jpg" alt="...">
             <div class="caption">
                 <h4>{{ survey.name }}</h4>
                 <p>{{ survey.dateconducted }}</p>
