--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -17,8 +17,13 @@
         <div id="visualizationContent">
             <div id="top-bar">
                 <div id="captionContainer">
-                    <span class="lbl-question" id="txtTitle"></span>
-                    <span class="lbl-option" id="txtDescription"></span>
+                    <div class="titleContainer glyphicon glyphicon-question-sign">
+                        <span class="lbl-question" id="txtTitle"></span>
+                    </div>
+                    <div class="descriptionContainer glyphicon glyphicon-ok">
+                        <span class="lbl-option" id="txtDescription"></span>
+                    </div>
+
                 </div>
                 <div id="options">
                     <span>View</span>
