--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -6,16 +6,13 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Surveys
-                    <small>Surveys</small>
-                </h2>
+                <h2 class="page-header">Surveys</h2>
             </div>
         </div>
 
-
     {% for survey in object_list %}
         <div class="thumbnail">
-            <img src="/static/images/docicon.jpg" alt="...">
+            <img src="{% static 'images/docicon.jpg' %}" alt="...">
             <div class="caption">
                 <h4>{{ survey.name }}</h4>
                 <p>{{ survey.dateconducted }}</p>
