--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -27,7 +27,7 @@
                 </div>
                 <div id="options">
                     <div class="btn-group">
-                        <button id="nodeview" type="button" class="btn btn-default"> Respondant</button>
+                        <button id="nodeview" type="button" class="btn btn-default"> Respondent</button>
                         <button id="collapsedview" type="button" class="btn btn-default"> Percentage</button>
                     </div>
                     <br/>
