--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -66,7 +66,7 @@
                             <a href="#">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; XXXXX 2015. All Rights Reserved</p>
                 </div>
             </div>
         </div>
