--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -45,7 +45,7 @@
         {% endblock %}
     </body>
      <!-- Footer -->
-    <footer>
+    <!--<footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -70,5 +70,5 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer>-->
 </html>
