--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -177,7 +177,7 @@ text.shadow {
     height: calc(100% - 172px);
     width: calc(100% - 320px);
     margin: 0px 10px;
-    border: 1px solid black;
+    border: 1px solid #666;
     position: absolute;
     display:none;
 }
@@ -199,7 +199,7 @@ text.shadow {
 
 .btn-default.disabled{
     color: #FFF;
-    background-color: #6D6E72  !important;
+    background-color: #3D4348  !important;
     border-color: #333 !important;
     -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.2);
     box-shadow: inset 0 3px 5px rgba(0,0,0,.2);
@@ -223,7 +223,7 @@ text.shadow {
 
 #captionContainer .panel-heading, #viewContainer .panel-heading{
     height:38px;
-    background-color: #6D6E72;
+    background-color: #3D4348;
     border-color: #6D6E72;
     border-top-right-radius: 0px;
     border-top-left-radius: 0px;
@@ -239,7 +239,7 @@ text.shadow {
     border: 1px solid #FFFFFF;
     border-radius: 1px;
     color: #FFFFFF;
-    background: #666;
+    background: #3D4348;
     border:1px solid #ddd;
 }
 
@@ -381,7 +381,7 @@ li .checkbox{
     margin-right: 0px;
 }
 .navbar-brand img {
-    max-height: 70px;
+    max-height: 68px;
 }
 
 .navbar > .container {
@@ -394,6 +394,7 @@ li .checkbox{
 
 
 .navbar-brand {
+    color: #c8c8c8;
     float: left;
     padding: 0px 15px;
 }
@@ -401,6 +402,24 @@ li .checkbox{
 .navbar {
     margin-bottom: 0px;
     height: 70px;
+    background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
+    background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#484e55), color-stop(60%, #3a3f44), to(#313539));
+    background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484e55', endColorstr='#ff313539', GradientType=0);
+    -webkit-filter: none;
+    filter: none;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.navbar-inverse .navbar-brand {
+    color: #c9c9c9;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #c9c9c9;
 }
 
 .intro-header {
