Added more demographic options

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -45,7 +45,10 @@
                 <li><a data-axis="Gender" href="#">Gender</a></li>
                 <li><a data-axis="Age" href="#">Age</a></li>
                 <li><a data-axis="Education" href="#">Education</a></li>
-                <li><a data-axis="Resident" href="#">Utah resident</a></li>
+                <li><a data-axis="OriginallyFromUtah" href="#">Originally from Utah</a></li>
+                <li><a data-axis="FarmTies" href="#">Farm Ties</a></li>
+                <li><a data-axis="SurveyVenue" href="#">Survey Venue</a></li>
+                <!--<li><a data-axis="Site" href="#">Survey Site</a></li>-->
               </ul>
             </div>
             <div id="map-canvas"></div>
