--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -126,16 +126,12 @@ svg{
     margin:0 !important;
     display: inline-block;
 }
-#listQuestions .panel-collapse label{
-
-}
 
 text.shadow {
     stroke: white;
     stroke-width: 2.5px;
     opacity: 0.9;
 }
-
 
 #options{
     width:300px;
@@ -251,6 +247,20 @@ text.shadow {
     top: -3px;
 }
 
+span.btnAdd {
+    cursor: pointer;
+    float: right;
+    right: 5px;
+    font-size: 12px;
+    color: #AAA;
+    width: 0;
+    position: inherit;
+}
+
+span.btnAdd:hover {
+    color:#777
+}
+
 hr{
     margin:0;
 }
@@ -319,6 +329,7 @@ hr{
     border-right:1px solid #aaa;
 }
 
+
 #CollisionToggleContainer{
     display: inline;
 }
@@ -357,11 +368,13 @@ hr{
   font-weight:bold;
 }
 
-#listQuestions label, #listQuestions a{
+#listQuestions a, #listQuestions label{
     font-weight:normal;
     color:#000;
     padding-right: 15px;
 }
+
+
 
 li .checkbox{
     margin-left:10px;
