--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -29,8 +29,8 @@
                   </div>
                   <div class="panel">
                     <div class="btn-group">
-                        <button id="nodeview" title="Respondent View" type="button" class="btn btn-default" aria-label="Center Align"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></button>
-                        <button id="collapsedview" title="Percentage View" type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
+                        <button id="map-view" title="Heat Map View" type="button" class="btn btn-default" aria-label="Center Align"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
+                        <button id="percentage-view" title="Percentage View" type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
                     </div>
                   </div>
                 </div>
