--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -476,8 +476,13 @@ li .checkbox{
 }
 
 path[data-zip]:hover{
-    fill: rgba(206, 252, 255, 0.71);
-    stroke-width:2px;
+    /*fill: rgba(206, 252, 255, 0.71);*/
+    stroke-width: 2px;
+}
+
+path[data-zip]{
+    stroke:#999;
+    stroke-width: 1px;
 }
 
 #state-borders {
@@ -490,12 +495,3 @@ path[data-zip]:hover{
 }
 
 
-.q0-9 { fill:rgb(247,251,255); }
-.q1-9 { fill:rgb(222,235,247); }
-.q2-9 { fill:rgb(198,219,239); }
-.q3-9 { fill:rgb(158,202,225); }
-.q4-9 { fill:rgb(107,174,214); }
-.q5-9 { fill:rgb(66,146,198); }
-.q6-9 { fill:rgb(33,113,181); }
-.q7-9 { fill:rgb(8,81,156); }
-.q8-9 { fill:rgb(8,48,107); }
